...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.908"
                app:layout_constraintStart_toEndOf="@+id/collection_textView"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/delete_collections_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@null"
                    android:src="@android:drawable/ic_menu_delete"
...
